--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -9,6 +9,7 @@ tokio.workspace=true
 lazy_static.workspace =true
 prometheus.workspace =true
 thiserror.workspace = true
+snowflake.workspace = true
 axum.workspace =true
 serde.workspace =true
 serde_json.workspace =true
