--- a/config/journal-server.toml
+++ b/config/journal-server.toml
@@ -1,4 +1,4 @@
-cluster_name = "StorageEngine1"
+cluster_name = "JournalCluster1"
 node_id = 1
 grpc_port = 2228
 prometheus_port = 2229
@@ -7,10 +7,10 @@ runtime_work_threads = 100
 # placement_center = ["14.103.42.35:1228"]
 placement_center = ["127.0.0.1:1228"]
 data_path = [
-    "/tmp/robust/storage-engine/storage/data1",
-    "/tmp/robust/storage-engine/storage/data2",
+    "/tmp/robust/journal-server/storage/data1",
+    "/tmp/robust/journal-server/storage/data2",
 ]
-log_path = "/tmp/robust/storage-engine/storage/logs"
+log_path = "/tmp/robust/journal-server/storage/logs"
 log_segment_size = 1099511627776
 log_file_num = 50
 
