--- a/src/journal-server/Cargo.toml
+++ b/src/journal-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "storage-engine"
+name = "journal-server"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
