memory storage index

--- a/src/storage-adapter/Cargo.toml
+++ b/src/storage-adapter/Cargo.toml
@@ -10,7 +10,8 @@ bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
 common-base.workspace = true
-clients.workspace =true
-protocol.workspace =true
-tokio.workspace =true
-tokio-util.workspace =true
+clients.workspace = true
+protocol.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
+dashmap.workspace = true
