--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -5,6 +5,10 @@ http_port = 9982
 placement_center = ["14.103.42.35:1228"]
 # placement_center = ["127.0.0.1:1228"]
 
+[storage]
+metadata = "memory"
+message = "memory"
+
 [mqtt]
 mqtt4_enable = true
 mqtt5_enable = true
