--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ byteorder = "1.5.0"
 toml = "0.8.8"
 uuid = { version = "1.7.0", features = ["v4"] }
 mobc = "0.8.3"
-dashmap = "5.5.3"
+dashmap = {version="5.5.3",features = ["serde"]}
 snowflake = "1.3.0"
 
 ## workspaces members
