--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -18,7 +18,7 @@ futures-util.workspace = true
 bytes.workspace = true
 lazy_static.workspace = true
 bincode.workspace = true
-ahash.workspace = true
+dashmap.workspace = true
 byteorder.workspace = true
 axum.workspace = true
 toml.workspace = true
