placement center dev

--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -21,3 +21,4 @@ lazy_static.workspace = true
 prometheus.workspace = true
 storage-adapter.workspace = true
 clients.workspace = true
+metadata-struct.workspace =true
