--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,8 +50,9 @@ byteorder = "1.5.0"
 toml = "0.8.8"
 uuid = { version = "1.7.0", features = ["v4"] }
 mobc = "0.8.3"
-dashmap = {version="5.5.3",features = ["serde"]}
+dashmap = { version = "5.5.3", features = ["serde"] }
 snowflake = "1.3.0"
+regex = "1.10.4"
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
