--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -41,6 +41,9 @@ response_queue_size = 2000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
+[subscribe]
+share_model = "rewrite"
+
 [log]
 log_path = "/tmp/logs"
 log_segment_size = 1073741824
