--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ mobc = "0.8.3"
 dashmap = { version = "5.5.3", features = ["serde"] }
 snowflake = "1.3.0"
 regex = "1.10.4"
+rumqttc = "0.24.0"
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
