--- a/config/cluster/mqtt-server/node-1.toml
+++ b/config/cluster/mqtt-server/node-1.toml
@@ -1,7 +1,7 @@
 cluster_name = "mqtt-broker"
-broker_id = 1
-grpc_port = 9981
-http_port = 9982
+broker_id = 7
+grpc_port = 9971
+http_port = 9972
 
 [storage]
 metadata = "memory"
@@ -21,12 +21,12 @@ server = ["127.0.0.1:1228"]
 mqtt4_enable = true
 mqtt5_enable = true
 websocket_enable = true
-mqtt4_port = 1883
-mqtts4_port = 8883
-mqtt5_port = 1884
-mqtts5_port = 8884
-websocket_port = 8083
-websockets_port = 8084
+mqtt4_port = 1873
+mqtts4_port = 8873
+mqtt5_port = 1874
+mqtts5_port = 8874
+websocket_port = 8073
+websockets_port = 8074
 
 [system]
 system_user = "admin"
@@ -51,6 +51,6 @@ share_model = "rewrite"
 shared_subscription_strategy = "round_robin"
 
 [log]
-log_path = "/tmp/logs"
+log_path = "/tmp/logs7"
 log_segment_size = 1073741824
 log_file_num = 50
