--- a/config/cluster/mqtt-server/node-3.toml
+++ b/config/cluster/mqtt-server/node-3.toml
@@ -1,17 +1,17 @@
 cluster_name = "mqtt-broker"
-broker_id = 1
-grpc_port = 9981
-http_port = 9982
+broker_id = 9
+grpc_port = 9991
+http_port = 9992
 
 [storage]
 metadata = "memory"
 message = "memory"
 
 [mysql]
-server="mysql://root:123456@127.0.0.1:3306/mqtt"
+server = "mysql://root:123456@127.0.0.1:3306/mqtt"
 
 [journal]
-server=[]
+server = []
 
 [placement]
 # server = ["14.103.42.35:1228"]
@@ -21,12 +21,12 @@ server = ["127.0.0.1:1228"]
 mqtt4_enable = true
 mqtt5_enable = true
 websocket_enable = true
-mqtt4_port = 1883
-mqtts4_port = 8883
-mqtt5_port = 1884
-mqtts5_port = 8884
-websocket_port = 8083
-websockets_port = 8084
+mqtt4_port = 1893
+mqtts4_port = 8893
+mqtt5_port = 1894
+mqtts5_port = 8894
+websocket_port = 8093
+websockets_port = 8094
 
 [system]
 system_user = "admin"
@@ -51,6 +51,6 @@ share_model = "rewrite"
 shared_subscription_strategy = "round_robin"
 
 [log]
-log_path = "/tmp/logs"
+log_path = "/tmp/logs9"
 log_segment_size = 1073741824
 log_file_num = 50
