--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -23,6 +23,7 @@ byteorder.workspace = true
 axum.workspace = true
 toml.workspace = true
 clients.workspace = true
+metadata-struct.workspace = true
 # raft = { version = "0.7", features = ["prost-codec"], default-features = false }
 #prost = "0.11"
 # raft = { path = "/Users/bytedance/Desktop/code/robustmq-project/raft-rs",  features = ["prost-codec"], default-features = false }
