--- a/src/common/metadata-struct/Cargo.toml
+++ b/src/common/metadata-struct/Cargo.toml
@@ -9,3 +9,4 @@ thiserror.workspace = true
 serde.workspace = true
 common-base.workspace = true
 serde_json.workspace = true
+protocol.workspace = true
