--- a/src/common/metadata-struct/Cargo.toml
+++ b/src/common/metadata-struct/Cargo.toml
@@ -10,3 +10,5 @@ serde.workspace = true
 common-base.workspace = true
 serde_json.workspace = true
 protocol.workspace = true
+bytes.workspace = true
+storage-adapter.workspace = true
