--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -23,3 +23,4 @@ storage-adapter.workspace = true
 clients.workspace = true
 metadata-struct.workspace = true
 regex.workspace = true
+placement-center.workspace = true
