--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ serde_json = "1.0"
 signal-hook = "0.3.17"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
-axum = "0.7.2"
+axum = {version = "0.7.2",features = ["ws"]}
 prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 lazy_static = "^1.4"
@@ -50,7 +50,7 @@ byteorder = "1.5.0"
 toml = "0.8.8"
 uuid = { version = "1.7.0", features = ["v4"] }
 mobc = "0.8.3"
-dashmap = { version = "5.5.3", features = ["serde"] }
+dashmap = { version = "6.0.1", features = ["serde"] }
 snowflake = "1.3.0"
 regex = "1.10.4"
 rumqttc = "0.24.0"
