--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ dashmap = { version = "6.0.1", features = ["serde"] }
 snowflake = "1.3.0"
 regex = "1.10.4"
 rumqttc = "0.24.0"
+axum-extra = {version = "0.9.3",features = ["typed-header"]}
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
