--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ signal-hook = "0.3.17"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
 axum = {version = "0.7.2",features = ["ws"]}
+axum-server = {version = "0.6.0",features = ["tls-rustls"]}
 prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 lazy_static = "^1.4"
