--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ snowflake = "1.3.0"
 regex = "1.10.4"
 rumqttc = "0.24.0"
 axum-extra = {version = "0.9.3",features = ["typed-header"]}
+rustls-pemfile = "2"
+tokio-rustls = "0.26"
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
