--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -5,14 +5,14 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-tokio.workspace=true
-lazy_static.workspace =true
-prometheus.workspace =true
+tokio.workspace = true
+lazy_static.workspace = true
+prometheus.workspace = true
 thiserror.workspace = true
 snowflake.workspace = true
-axum.workspace =true
-serde.workspace =true
-serde_json.workspace =true
+axum.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 toml.workspace = true
 uuid.workspace = true
 log = "0.4.0"
@@ -20,3 +20,4 @@ env_logger = "0.10.0"
 log4rs = "1.2.0"
 local-ip-address = "0.6.1"
 tonic.workspace = true
+humantime-serde.workspace = true
