--- a/src/storage-adapter/Cargo.toml
+++ b/src/storage-adapter/Cargo.toml
@@ -15,6 +15,7 @@ protocol.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
 dashmap.workspace = true
-mysql = "*"
 serde.workspace = true
-serde_json.workspace =true
+serde_json.workspace = true
+third-driver.workspace = true
+mysql.workspace = true
