--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -10,8 +10,8 @@ tcps_port = 8883
 websocket_port = 8083
 websockets_port = 8084
 quic_port = 9083
-tls_cert = "./config/certs/cert.pem"
-tls_key = "./config/certs/key.pem"
+tls_cert = "./config/example/certs/cert.pem"
+tls_key = "./config/example/certs/key.pem"
 
 [tcp_thread]
 accept_thread_num = 1
