--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -15,7 +15,7 @@ tls_key = "./config/example/certs/key.pem"
 
 [tcp_thread]
 accept_thread_num = 1
-handler_thread_num = 1
+handler_thread_num = 10
 response_thread_num = 1
 max_connection_num = 1000
 request_queue_size = 2000
@@ -24,7 +24,7 @@ lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
 [auth]
-storage_type="journal"
+storage_type="placement"
 
 
 [system]
