--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - name: Build1
       run: cargo build --verbose
-    - name: Run tests
+    - name: Run tests1
       run: cargo test --verbose
