--- a/config/example/cluster/mqtt-server/node-3.toml
+++ b/config/example/cluster/mqtt-server/node-3.toml
@@ -1,15 +1,15 @@
-// Copyright 2023 RobustMQ Team
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-//
-//     http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
+#  Copyright 2023 RobustMQ Team
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+# 
+#      http:# www.apache.org/licenses/LICENSE-2.0
+# 
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
 
 
 cluster_name = "mqtt-broker"
@@ -22,7 +22,7 @@ metadata = "memory"
 message = "memory"
 
 [mysql]
-server = "mysql://root:123456@127.0.0.1:3306/mqtt"
+server = "mysql:# root:123456@127.0.0.1:3306/mqtt"
 
 [journal]
 server = []
