--- a/config/example/cluster/mqtt-server/node-1.toml
+++ b/config/example/cluster/mqtt-server/node-1.toml
@@ -12,7 +12,7 @@
 #  limitations under the License.
 
 
-cluster_name = "mqtt-broker"
+cluster_name = "mqtt-broker1"
 broker_id = 7
 grpc_port = 9971
 http_port = 9972
