--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -45,3 +45,4 @@ axum-server.workspace = true
 rustls-pemfile.workspace = true
 tokio-rustls.workspace = true
 mysql.workspace = true
+paho-mqtt.workspace = true
