placement center dev

--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -36,3 +36,4 @@ local-ip-address = "0.6.1"
 tonic.workspace = true
 humantime-serde.workspace = true
 prost.workspace = true
+rocksdb.workspace = true
