--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,9 @@ tokio-rustls = "0.26"
 humantime-serde = "1.1.1"
 mysql = "*"
 paho-mqtt = "0.12.5"
+serde_yaml = "0.9"
+log4rs = "1.2.0"
+log = "0.4.0"
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
