--- a/config/log4rs.yaml
+++ b/config/log4rs.yaml
@@ -1,12 +1,14 @@
 appenders:
   stdout:
     kind: console
+    encoder:
+        pattern: "{d(%Y-%m-%d %H:%M:%S)} {f}:{L} {h({l})} {m}{n}"
 
   server:
     kind: rolling_file
     path: "{$path}/server.log"
     encoder:
-        pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
+        pattern: "{d(%Y-%m-%d %H:%M:%S)} {f}:{L} {h({l})} {m}{n}"
     policy:
         trigger:
             kind: size
@@ -14,21 +16,6 @@ appenders:
         roller:
             kind: fixed_window
             pattern: "{$path}/server-{}.log"
-            base: 0
-            count: 50
-
-  requests:
-    kind: rolling_file
-    path: "{$path}/requests-log.log"
-    encoder:
-        pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
-    policy:
-        trigger:
-            kind: size
-            limit: 1 gb
-        roller:
-            kind: fixed_window
-            pattern: "{$path}/requests-log-{}.log"
             base: 0
             count: 50
 
