--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -49,8 +49,6 @@ default_password = "pwd123"
 [storage]
 storage_type = "memory"
 
-
 [log]
-log_path = "/tmp/logs"
-log_segment_size = 1073741824
-log_file_num = 50
+log_config = "./config/log4rs.yaml"
+log_path = "./logs/mqtt"
