--- a/tests/config/mqtt-server-1.toml
+++ b/tests/config/mqtt-server-1.toml
@@ -38,7 +38,7 @@ lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
 [auth]
-storage_type="placement"
+storage_type = "placement"
 
 
 [system]
@@ -53,6 +53,5 @@ storage_type = "memory"
 
 
 [log]
-log_path = "/tmp/logs/tests/"
-log_segment_size = 1073741824
-log_file_num = 50
+log_config = "./config/log4rs.yaml"
+log_path = "./logs/tests/mqtt"
