--- a/tests/config/mqtt-server-2.toml
+++ b/tests/config/mqtt-server-2.toml
@@ -53,6 +53,5 @@ storage_type = "memory"
 
 
 [log]
-log_path = "/tmp/logs/tests/"
-log_segment_size = 1073741824
-log_file_num = 50
+log_config = "./config/log4rs.yaml"
+log_path = "./logs/tests/mqtt"
