--- a/tests/config/placement-center.toml
+++ b/tests/config/placement-center.toml
@@ -20,11 +20,12 @@ http_port = 1227
 nodes = { 1 = "127.0.0.1:1228" }
 runtime_work_threads = 100
 data_path = "/tmp/robust/tests/placement-center/data"
-log_path = "/tmp/robust/tests/placement-center/logs"
-log_segment_size = 1099511627776
-log_file_num = 50
 heartbeat_timeout_ms = 30000
 heartbeat_check_time_ms = 1000
 
 [rocksdb]
 max_open_files = 10000
+
+[log]
+log_config = "./config/log4rs.yaml"
+log_path = "./logs/tests/pc"
