--- a/tests/config/placement-center.toml
+++ b/tests/config/placement-center.toml
@@ -28,4 +28,4 @@ max_open_files = 10000
 
 [log]
 log_config = "./config/log4rs.yaml"
-log_path = "./logs/tests/pc"
+log_path = "/tmp/logs/tests/pc"
