--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -38,7 +38,7 @@ lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
 [auth]
-storage_type="placement"
+storage_type = "placement"
 
 
 [system]
@@ -51,4 +51,4 @@ storage_type = "memory"
 
 [log]
 log_config = "./config/log4rs.yaml"
-log_path = "./logs/mqtt-broker"
+log_path = "/tmp/robust/mqtt-broker/logs"
