--- a/config/placement-center.toml
+++ b/config/placement-center.toml
@@ -28,4 +28,4 @@ max_open_files = 10000
 
 [log]
 log_config = "./config/log4rs.yaml"
-log_path = "./logs/placement-center"
+log_path = "/tmp/robust/placement-center/logs"
