--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ paho-mqtt = "0.12.5"
 serde_yaml = "0.9"
 log4rs = "1.2.0"
 log = "0.4.0"
+ipnet = "2.3.0"
 
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
