mqtt broker dev

--- a/src/storage-adapter/Cargo.toml
+++ b/src/storage-adapter/Cargo.toml
@@ -33,3 +33,4 @@ serde.workspace = true
 serde_json.workspace = true
 third-driver.workspace = true
 mysql.workspace = true
+metadata-struct.workspace = true
