mqtt broker dev

--- a/src/clients/Cargo.toml
+++ b/src/clients/Cargo.toml
@@ -33,3 +33,4 @@ prost.workspace = true
 dashmap.workspace = true
 log.workspace = true
 metadata-struct.workspace = true
+serde_json.workspace = true
