--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-#    - name: Build
-#      run: cargo build --verbose
+    - name: Build
+      run: make release
     - name: Run tests
       run: make test
