--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -31,6 +31,10 @@ path = "src/journal-server/server.rs"
 name = "placement-center"
 path = "src/placement-center/server.rs"
 
+[[bin]]
+name = "cli-command"
+path = "src/cli-command/command.rs"
+
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
 common-base.workspace = true
@@ -39,3 +43,4 @@ tokio.workspace = true
 mqtt-broker.workspace = true
 placement-center.workspace = true
 journal-server.workspace = true
+cli-command.workspace = true
