--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ rustls-pemfile = "2"
 tokio-rustls = "0.26"
 humantime-serde = "1.1.1"
 mysql = "*"
-paho-mqtt = { version = "0.12.5", default_features = false, features = ["bundled", "vendored-ssl"] }
+paho-mqtt = { version = "0.12.5", default-features = false, features = ["bundled", "vendored-ssl"] }
 serde_yaml = "0.9"
 log4rs = "1.2.0"
 log = "0.4.0"
