--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: taiki-e/install-action@v2
+      with:
+        tool: nextest
     - uses: actions/checkout@v3
     - name: Build
       run: make release
