--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Robust Community Slack
-    url: https://robust.com/slack
-    about: Get free help from the Robust community
-  - name: Robust Community Discussion
-    url: https://github.com/robustmq/robustmq/discussions
+    url: https://app.slack.com/client/T07MFH344Q7/C07MPETNHAA
     about: Get free help from the Robust community
