--- a/licenserc.toml
+++ b/licenserc.toml
@@ -1,4 +1,4 @@
-# Copyright 2023 Greptime Team
+# Copyright 2023 RobustMQ Team
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,6 +15,9 @@
 headerPath = "Apache-2.0.txt"
 
 includes = [
+    "*.yml",
+    "*.yaml",
+    "*.toml",
     "*.sh",
     "*.rs",
     "*.py",
