--- a/config/placement-center.toml
+++ b/config/placement-center.toml
@@ -13,17 +13,25 @@
 # limitations under the License.
 
 cluster_name = "placement-test"
+
+[node]
 node_id = 1
 addr = "127.0.0.1"
+nodes = { 1 = "127.0.0.1:1228" }
+
+[network]
 grpc_port = 1228
 http_port = 1227
-nodes = { 1 = "127.0.0.1:1228" }
+
+[system]
 runtime_work_threads = 100
-data_path = "/tmp/robust/placement-center/data"
+
+[heartbeat]
 heartbeat_timeout_ms = 30000
 heartbeat_check_time_ms = 1000
 
 [rocksdb]
+data_path = "/tmp/robust/placement-center/data"
 max_open_files = 10000
 
 [log]
