--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -26,7 +26,7 @@ protocol.workspace = true
 thiserror.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-rocksdb.workspace = true
+rocksdb-engine.workspace = true
 futures.workspace = true
 futures-util.workspace = true
 bytes.workspace = true
