--- a/tests/config/mqtt-server-2.toml
+++ b/tests/config/mqtt-server-2.toml
@@ -38,7 +38,7 @@ lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
 [auth]
-storage_type="placement"
+storage_type = "placement"
 
 
 [system]
@@ -49,9 +49,11 @@ default_password = "pwd123"
 [storage]
 #type = 'journal'
 #journal_addr = []
-storage_type = "memory"
-
+# storage_type = "memory"
+storage_type = "rocksdb"
+rocksdb_data_path = "/tmp/robust/mqtt-broker/data"
+rocksdb_max_open_files = 10000
 
 [log]
 log_config = "./config/log4rs.yaml"
-log_path ="/tmp/robust/tests/mqtt-broker/logs2"
+log_path = "/tmp/robust/tests/mqtt-broker/logs2"
