RBIP-24: command-line tool supports' robustctl-mqtt status' to view broker node status

--- a/src/cli-command/Cargo.toml
+++ b/src/cli-command/Cargo.toml
@@ -23,3 +23,6 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
+clients.workspace = true
+common-base.workspace = true
+protocol.workspace = true
