--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -14,3 +14,5 @@
 
 group_imports = "StdExternalCrate"
 imports_granularity = "Module"
+fn_params_layout = "Compressed"
+use_small_heuristics = "Max"
