--- a/.github/workflows/rust-testing.yml
+++ b/.github/workflows/rust-testing.yml
@@ -27,7 +27,11 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: taiki-e/install-action@nextest
     - uses: actions/checkout@v3
+    - name: Install cargo-nextest
+        uses: baptiste0928/cargo-install@v1
+        with:
+          crate: cargo-nextest
+          locked: true
     - name: Run tests
       run: make test
