--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -38,6 +38,7 @@ axum.workspace = true
 toml.workspace = true
 clients.workspace = true
 metadata-struct.workspace = true
+openraft.workspace = true
 # raft = { version = "0.7", features = ["prost-codec"], default-features = false }
 #prost = "0.11"
 
