--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ serde_yaml = "0.9"
 log4rs = "1.2.0"
 log = "0.4.0"
 ipnet = "2.3.0"
+openraft = "0.9.16"
 os_info = "3.8.2"
 
 ## workspaces members
