--- a/example/mqtt-cluster/mqtt-server/node-1.toml
+++ b/example/mqtt-cluster/mqtt-server/node-1.toml
@@ -12,46 +12,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cluster_name = "mqtt-broker1"
-broker_id = 7
-grpc_port = 9971
-http_port = 9972
+cluster_name = "mqtt-broker"
+broker_id = 1
+grpc_port = 9981
+http_port = 9982
+placement_center = ["127.0.0.1:1228","127.0.0.1:2228","127.0.0.1:3228"]
 
-[storage]
-metadata = "memory"
-message = "memory"
+[network]
+tcp_port = 1883
+tcps_port = 8883
+websocket_port = 8093
+websockets_port = 8043
+quic_port = 9083
+tls_cert = "./config/example/certs/cert.pem"
+tls_key = "./config/example/certs/key.pem"
 
-[mysql]
-server="mysql:# root:123456@127.0.0.1:3306/mqtt"
-
-[journal]
-server=[]
-
-[placement]
-# server = ["14.103.42.35:1228"]
-server = ["127.0.0.1:1228"]
-
-[mqtt]
-mqtt4_enable = true
-mqtt5_enable = true
-websocket_enable = true
-mqtt4_port = 1873
-mqtts4_port = 8873
-mqtt5_port = 1874
-mqtts5_port = 8874
-websocket_port = 8073
-websockets_port = 8074
-
-[system]
-system_user = "admin"
-system_password = "pwd123"
-
-[runtime]
-worker_threads = 16
-
-[network_tcp]
+[tcp_thread]
 accept_thread_num = 1
-handler_thread_num = 1
+handler_thread_num = 10
 response_thread_num = 1
 max_connection_num = 1000
 request_queue_size = 2000
@@ -59,12 +37,23 @@ response_queue_size = 2000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
-[subscribe]
-share_model = "rewrite"
-# random, round_robin, sticky, hash
-shared_subscription_strategy = "round_robin"
+[auth]
+storage_type = "placement"
+
+[prometheus]
+model = "push"
+push_gateway_server = "127.0.0.1:8081"
+interval = 10
+header = ""
+
+[system]
+runtime_worker_threads = 128
+default_user = "admin"
+default_password = "pwd123"
+
+[storage]
+storage_type = "memory"
 
 [log]
-log_path = "/tmp/logs7"
-log_segment_size = 1073741824
-log_file_num = 50
+log_config = "./config/log4rs.yaml"
+log_path = "/tmp/robust/mqtt-broker-1/logs"
