--- a/example/mqtt-cluster/mqtt-server/node-3.toml
+++ b/example/mqtt-cluster/mqtt-server/node-3.toml
@@ -13,45 +13,23 @@
 # limitations under the License.
 
 cluster_name = "mqtt-broker"
-broker_id = 9
-grpc_port = 9991
-http_port = 9992
+broker_id = 3
+grpc_port = 39981
+http_port = 39982
+placement_center = ["127.0.0.1:1228","127.0.0.1:2228","127.0.0.1:3228"]
 
-[storage]
-metadata = "memory"
-message = "memory"
+[network]
+tcp_port = 31883
+tcps_port = 38883
+websocket_port = 38093
+websockets_port = 38043
+quic_port = 39083
+tls_cert = "./config/example/certs/cert.pem"
+tls_key = "./config/example/certs/key.pem"
 
-[mysql]
-server = "mysql:#root:123456@127.0.0.1:3306/mqtt"
-
-[journal]
-server = []
-
-[placement]
-# server = ["14.103.42.35:1228"]
-server = ["127.0.0.1:1228"]
-
-[mqtt]
-mqtt4_enable = true
-mqtt5_enable = true
-websocket_enable = true
-mqtt4_port = 1893
-mqtts4_port = 8893
-mqtt5_port = 1894
-mqtts5_port = 8894
-websocket_port = 8093
-websockets_port = 8094
-
-[system]
-system_user = "admin"
-system_password = "pwd123"
-
-[runtime]
-worker_threads = 16
-
-[network_tcp]
+[tcp_thread]
 accept_thread_num = 1
-handler_thread_num = 1
+handler_thread_num = 10
 response_thread_num = 1
 max_connection_num = 1000
 request_queue_size = 2000
@@ -59,12 +37,24 @@ response_queue_size = 2000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
-[subscribe]
-share_model = "rewrite"
-# random, round_robin, sticky, hash
-shared_subscription_strategy = "round_robin"
+[auth]
+storage_type = "placement"
+
+[prometheus]
+model = "push"
+push_gateway_server = "127.0.0.1:8081"
+interval = 10
+header = ""
+
+[system]
+runtime_worker_threads = 128
+default_user = "admin"
+default_password = "pwd123"
+
+[storage]
+storage_type = "memory"
 
 [log]
-log_path = "/tmp/logs9"
-log_segment_size = 1073741824
-log_file_num = 50
+log_config = "./config/log4rs.yaml"
+log_path = "/tmp/robust/mqtt-broker-3/logs"
+
