--- a/config/journal-server.toml
+++ b/config/journal-server.toml
@@ -14,27 +14,40 @@
 
 cluster_name = "JournalCluster1"
 node_id = 1
+placement_center = ["127.0.0.1:1228"]
+
+[network]
 grpc_port = 2228
-prometheus_port = 2229
-nodes = { 1 = "127.0.0.1:2228" }
+tcp_port = 3110
+tcps_port = 3111
+tls_cert = "./config/example/certs/cert.pem"
+tls_key = "./config/example/certs/key.pem"
+
+[system]
 runtime_work_threads = 100
-placement_center = ["14.103.42.35:1228"]
-# placement_center = ["127.0.0.1:1228"]
+
+[storage]
 data_path = [
     "/tmp/robust/journal-server/storage/data1",
     "/tmp/robust/journal-server/storage/data2",
 ]
+rocksdb_max_open_files = 10000
 
-[rocksdb]
-max_open_files = 10000
-
-[network]
+[tcp_thread]
 accept_thread_num = 1
 handler_thread_num = 20
 response_thread_num = 2
 max_connection_num = 1000
 request_queue_size = 2000
 response_queue_size = 2000
+
+[prometheus]
+enable = false
+model = "pull"
+port = 3306
+push_gateway_server = "127.0.0.1:8081"
+interval = 10
+header = ""
 
 [log]
 log_config = "./config/log4rs.yaml"
