--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -38,7 +38,7 @@ lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
 [auth]
-storage_type = "placement"
+storage_type = "memory"
 
 [prometheus]
 model = "push"
