--- a/src/journal-server/Cargo.toml
+++ b/src/journal-server/Cargo.toml
@@ -32,3 +32,6 @@ tokio-util.workspace = true
 futures.workspace = true
 dashmap.workspace = true
 log.workspace = true
+rustls-pemfile.workspace = true
+tokio-rustls.workspace = true
+futures-util.workspace = true
