--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ src/rlog/log/server.log
 .idea/vcs.xml
 logs
 nohup.out
+.idea/checkstyle-idea.xml
+.idea/misc.xml
+.idea/codeStyles/Project.xml
+.idea/codeStyles/codeStyleConfig.xml
