--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -17,6 +17,7 @@ name = "protocol"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+build = "build.rs"
 
 
 [dependencies]
@@ -32,3 +33,6 @@ tokio.workspace = true
 futures.workspace = true
 common-base.workspace =true
 serde.workspace =true
+
+[build-dependencies]
+tonic-build.workspace = true
