integrate the  package to refactor the parameter validation process in register_node function
Signed-off-by: chenfeilong <2652917633@qq.com>

--- a/src/grpc-clients/Cargo.toml
+++ b/src/grpc-clients/Cargo.toml
@@ -35,3 +35,4 @@ log.workspace = true
 metadata-struct.workspace = true
 serde_json.workspace = true
 regex.workspace = true
+validator.workspace = true
