--- a/.github/workflows/rust-testing.yml
+++ b/.github/workflows/rust-testing.yml
@@ -32,6 +32,18 @@ jobs:
       with:
         crate: cargo-nextest
         locked: true
+   - if: matrix.os == 'ubuntu-latest'
+      name: Install dependencies (ubuntu-latest)
+      run: |
+        sudo apt-get install protobuf-compiler
+    - if: matrix.os == 'macos-latest'
+      name: Install dependencies (macos-latest)
+      run: |
+        brew install protobuf
+    - if: matrix.os == 'windows-latest'
+      name: Install dependencies (windows-latest)
+      run: |
+        choco install protoc
     - uses: actions/checkout@v3
     - name: Run tests
       run: make test
