--- a/.github/workflows/rust-testing.yml
+++ b/.github/workflows/rust-testing.yml
@@ -27,18 +27,9 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - if: matrix.os == 'ubuntu-latest'
-        name: Install dependencies (ubuntu-latest)
+      - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get install protobuf-compiler
-      - if: matrix.os == 'macos-latest'
-        name: Install dependencies (macos-latest)
-        run: |
-          brew install protobuf
-      - if: matrix.os == 'windows-latest'
-        name: Install dependencies (windows-latest)
-        run: |
-          choco install protoc
       - name: Install cargo-nextest
         uses: baptiste0928/cargo-install@v1
         with:
@@ -66,18 +57,9 @@ jobs:
   clippy:
     runs-on: ubuntu-latest
     steps:
-      - if: matrix.os == 'ubuntu-latest'
-        name: Install dependencies (ubuntu-latest)
+      - name: Install dependencies (ubuntu-latest)
         run: |
           sudo apt-get install protobuf-compiler
-      - if: matrix.os == 'macos-latest'
-        name: Install dependencies (macos-latest)
-        run: |
-          brew install protobuf
-      - if: matrix.os == 'windows-latest'
-        name: Install dependencies (windows-latest)
-        run: |
-          choco install protoc
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
