--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -25,10 +25,12 @@ axum.workspace = true
 tonic.workspace = true
 thiserror.workspace = true
 prost.workspace = true
-tonic-build.workspace = true
 tokio-util.workspace = true
 bincode.workspace = true
 tokio.workspace = true
 futures.workspace = true
 common-base.workspace =true
 serde.workspace =true
+
+[build-dependencies]
+tonic-build.workspace = true
