--- a/.github/workflows/rust-testing.yml
+++ b/.github/workflows/rust-testing.yml
@@ -70,4 +70,5 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all -- --deny warnings
+          args: --all
+          # args: --all -- --deny warnings
