fixed: Fix code warnings and remove invalid code

--- a/.github/workflows/rust-testing.yml
+++ b/.github/workflows/rust-testing.yml
@@ -70,5 +70,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all
-          # args: --all -- --deny warnings
+          args: --all -- --deny warnings
