refactor: Define a trait for parameter validation and implement it for RegisterNodeRequest. (#526)
* implement ValidateExit trait for the RegisterNodeRequest structure

---------

Signed-off-by: chenfeilong <2652917633@qq.com>

--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -32,6 +32,7 @@ tokio.workspace = true
 futures.workspace = true
 common-base.workspace =true
 serde.workspace =true
+validator.workspace = true
 
 [build-dependencies]
 tonic-build.workspace = true
