--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -39,6 +39,7 @@ toml.workspace = true
 grpc-clients.workspace = true
 metadata-struct.workspace = true
 openraft.workspace = true
+rand.workspace = true
 # raft = { version = "0.7", features = ["prost-codec"], default-features = false }
 #prost = "0.11"
 
