Journal Engine TCP interface logic function development

--- a/src/journal-client/Cargo.toml
+++ b/src/journal-client/Cargo.toml
@@ -23,3 +23,7 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
+protocol.workspace = true
+futures.workspace = true
