RobustMQ Cli supports CreateUser, DeleteUser, and ListUser operations
Signed-off-by: pikady <2652917633@qq.com>

--- a/src/cli-command/Cargo.toml
+++ b/src/cli-command/Cargo.toml
@@ -25,4 +25,6 @@ axum.workspace = true
 thiserror.workspace = true
 grpc-clients.workspace = true
 common-base.workspace = true
+metadata-struct.workspace = true
 protocol.workspace = true
+serde_json.workspace = true
