refactor code related to the command line
Signed-off-by: pikady <2652917633@qq.com>

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -45,3 +45,4 @@ placement-center.workspace = true
 journal-server.workspace = true
 cli-command.workspace = true
 clap-cargo = "0.14.1"
+protocol.workspace = true
