--- a/src/journal-server/Cargo.toml
+++ b/src/journal-server/Cargo.toml
@@ -38,4 +38,5 @@ futures-util.workspace = true
 metadata-struct.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+prost.workspace = true
 rocksdb-engine.workspace = true
