--- a/src/journal-client/Cargo.toml
+++ b/src/journal-client/Cargo.toml
@@ -30,3 +30,4 @@ futures.workspace = true
 common-base.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+dashmap.workspace = true
