--- a/src/journal-client/Cargo.toml
+++ b/src/journal-client/Cargo.toml
@@ -28,3 +28,6 @@ tokio-util.workspace = true
 protocol.workspace = true
 futures.workspace = true
 common-base.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+dashmap.workspace = true
