--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,6 +119,8 @@ robustmq-test = { path = "tests" }
 
 [profile.dev]
 overflow-checks = false
+incremental = true
 
 [profile.release]
 overflow-checks = false
+incremental = true
