--- a/.github/workflows/rust-testing.yml
+++ b/.github/workflows/rust-testing.yml
@@ -57,6 +57,7 @@ jobs:
           key: cargo-cache-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }}  # Run tests
 
   linux-tests:
+    name: cargo test
     needs: [ linux-build-lib ]
     runs-on: ubuntu-latest
     container:
