--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -58,35 +58,61 @@ jobs:
 
   rustfmt:
     runs-on: ubuntu-latest
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-      - name: Install rustfmt
-        run: rustup component add rustfmt
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
       - uses: actions-rs/cargo@v1
         name: rust-fmt
         with:
           command: fmt
           args: --all -- --check
 
-  clippy:
+  deny:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies (ubuntu-latest)
-        run: |
-          sudo apt-get install protobuf-compiler
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: Install cargo-deny
+        run: cargo install cargo-deny@0.16.2
+      - uses: actions-rs/cargo@v1
+        name: cargo deny check
         with:
-          toolchain: stable
-          override: true
-      - name: Install clippy
-        run: rustup component add clippy
+          command: check
+          args: licenses
+
+  typos:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: Install typos
+        run: cargo install typos-cli@1.27.3
+      - uses: typos check
+        run: typos
+
+  clippy:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
       - uses: actions-rs/cargo@v1
         name: rust-clippy
         with:
           command: clippy
-          args: --all -- --deny warnings
+          args: --all-targets --all-features --tests --benches -- -D warnings
