--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Install cargo-nextest
         uses: baptiste0928/cargo-install@v1
         with:
-          crate: cargo-nextest
+          crate: cargo-nextest@0.9.84
           locked: true
       - uses: actions/checkout@v3
       - name: Run tests
