ci: Integrate CI with pre-commit checks. (#627)
* Integrate CI with pre-commit checks

--- a/deny.toml
+++ b/deny.toml
@@ -142,9 +142,8 @@ expression = "MIT AND ISC AND OpenSSL"
 # and the crate will be checked normally, which may produce warnings or errors
 # depending on the rest of your configuration
 license-files = [
-# Each entry is a crate relative path, and the (opaque) hash of its contents
-#{ path = "LICENSE", hash = 0xbd0eed23 }
-    { path = "/root/.cargo/registry/src/rsproxy.cn-8f6827c7555bfaf8/ring-0.17.8/LICENSE", hash = 0xbd0eed23 },
+    # Each entry is a crate relative path, and the (opaque) hash of its contents
+    { path = "LICENSE", hash = 0xbd0eed23 },
 ]
 
 [licenses.private]
@@ -245,7 +244,10 @@ unknown-registry = "warn"
 unknown-git = "warn"
 # List of URLs for allowed crate registries. Defaults to the crates.io index
 # if not specified. If it is specified but empty, no registries are allowed.
-allow-registry = ["https://github.com/rust-lang/crates.io-index"]
+allow-registry = [
+    "https://github.com/rust-lang/crates.io-index",
+    "https://rsproxy.cn/crates.io-index"
+]
 # List of URLs for allowed Git repositories
 allow-git = []
 
