--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -15,15 +15,14 @@
 name: Code Style
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
     paths-ignore:
       - "docs/**"
       - "**.md"
       - ".github/ISSUE_TEMPLATE/**"
       - ".github/pull_request_template.md"
   pull_request:
-    branches: [ "main" ]
     paths-ignore:
       - "docs/**"
       - "**.md"
@@ -58,35 +57,78 @@ jobs:
 
   rustfmt:
     runs-on: ubuntu-latest
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-      - name: Install rustfmt
-        run: rustup component add rustfmt
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: install rustfmt
+        run:  rustup component add rustfmt
       - uses: actions-rs/cargo@v1
         name: rust-fmt
         with:
           command: fmt
           args: --all -- --check
 
-  clippy:
+  deny:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies (ubuntu-latest)
-        run: |
-          sudo apt-get install protobuf-compiler
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: Install cargo-deny
+        run: cargo install cargo-deny@0.16.2
+      - name: cargo deny check
+        run: cargo-deny check licenses
+
+  typos:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: Install typos
+        run: cargo install typos-cli@1.27.3
+      - name: typos check
+        run: typos
+
+  # this is compiling check
+  cargo-compile-check:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: cargo check
+        uses: actions-rs/cargo@v1
         with:
-          toolchain: stable
-          override: true
+          command: check
+          args: --all
+
+  clippy:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
       - name: Install clippy
-        run: rustup component add clippy
+        run:  rustup component add clippy
       - uses: actions-rs/cargo@v1
         name: rust-clippy
         with:
           command: clippy
-          args: --all -- --deny warnings
+          args: --all-targets --all-features --tests --benches -- -D warnings
