--- a/config/log4rs.yaml
+++ b/config/log4rs.yaml
@@ -16,7 +16,7 @@ appenders:
   stdout:
     kind: console
     encoder:
-        pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
+        pattern: "{d(%Y-%m-%d %H:%M:%S)} {f}-{L} {h({l})} {m}{n}"
 
   server:
     kind: rolling_file
