Update excluded typo

--- a/_typos.toml
+++ b/_typos.toml
@@ -20,6 +20,8 @@
 # we need to ignore it.
 Identifer = "Identifer"
 
+# Ignore the unsubscribe term as it's used in the MQTT context.
+UNSUBSCRIBE = "UNSUBSCRIBE"
 
 [files]
 extend-exclude = []
