Add more excluded typo

--- a/_typos.toml
+++ b/_typos.toml
@@ -22,6 +22,9 @@ Identifer = "Identifer"
 
 # Ignore the unsubscribe term as it's used in the MQTT context.
 UNSUBSCRIBE = "UNSUBSCRIBE"
+unsubscrible = "unsubscrible"
+SUBSCRIBLE = "SUBSCRIBLE"
+
 
 [files]
 extend-exclude = []
