feat: Add record_received_metrics (#645)
* Add record_received_metrics

* Fix the code style

* Update excluded typo

* Add more excluded typo

--- a/_typos.toml
+++ b/_typos.toml
@@ -20,6 +20,11 @@
 # we need to ignore it.
 Identifer = "Identifer"
 
+# Ignore the unsubscribe term as it's used in the MQTT context.
+UNSUBSCRIBE = "UNSUBSCRIBE"
+unsubscrible = "unsubscrible"
+SUBSCRIBLE = "SUBSCRIBLE"
+
 
 [files]
 extend-exclude = []
