--- a/src/mqtt-edge/Cargo.toml
+++ b/src/mqtt-edge/Cargo.toml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [package]
-name = "journal-client"
+name = "mqtt-edge"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -23,13 +23,3 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
-tokio.workspace = true
-tokio-util.workspace = true
-protocol.workspace = true
-futures.workspace = true
-common-base.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-dashmap.workspace = true
-log.workspace = true
-metadata-struct.workspace = true
