--- a/src/storage-adapter/Cargo.toml
+++ b/src/storage-adapter/Cargo.toml
@@ -35,3 +35,4 @@ third-driver.workspace = true
 mysql.workspace = true
 metadata-struct.workspace = true
 rocksdb-engine.workspace = true
+journal-client.workspace = true
