--- a/.github/workflows/place-ig-test.yml
+++ b/.github/workflows/place-ig-test.yml
@@ -32,9 +32,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-
   linux-tests:
-    name: place-ig-test
+    name: cargo test
     needs: [ linux-build-lib ]
     runs-on: ubuntu-latest
     container:
